syntax = "proto2";

import "asn1_pdu.proto"; // To use a ASN1 PDU.
import "asn1_types.proto"; // To use a specific ASN1 type.

package cert_proto;

message X509Certificate {
  required asn1_types.ASN1BitString signature_value = 3;
}